--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,7 +16,9 @@ jobs:
             --location https://api.github.com/repos/AshishBhoi/private/contents/redis.go
     - name: Docker login
       run: docker login docker.pkg.github.com -u AshishBhoi -p ${{ secrets.SECRET }}
+    - name: Version name
+      run: foo=$(echo ${{ github.ref }} | sed 's/[^0-9\.]*//g')
     - name: Build the Docker image
-      run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app .
+      run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app:$foo .
     - name: Push Docker image to github
-      run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app
+      run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app:$foox
