--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,11 +16,14 @@ jobs:
             --location https://api.github.com/repos/AshishBhoi/private/contents/redis.go
     - name: Docker login
       run: docker login docker.pkg.github.com -u AshishBhoi -p ${{ secrets.SECRET }}
-    - name: Version name
-      run: foo=$(echo ${{ github.ref }} | sed 's/[^0-9\.]*//g')
-      env:
-        version: ${foo}
+    - name: Extract tag name
+      id: tag
+      uses: actions/github-script@0.2.0
+      with:
+        github-token: ${{ secrets.SECRET }}
+        script: |
+          return context.payload.ref.replace(/\/refs\/tags\//v, '');
     - name: Build the Docker image
-      run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app:${version} .
+      run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app:${{ steps.tag.outputs.result }} .
     - name: Push Docker image to github
-      run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app:$foox
+      run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app:${{ steps.tag.outputs.result }}
