--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,7 +3,7 @@ on:
     tags:
       - '*'
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -23,3 +23,21 @@ jobs:
       run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app:${{ steps.get_version.outputs.VERSION }} .
     - name: Push Docker image to github
       run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app:${{ steps.get_version.outputs.VERSION }}
+      
+  job2:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Add Database Details
+      run: |
+        /usr/bin/curl -o redis.go \
+        --header "Authorization: token ${{ secrets.SECRET }}" \
+        --header "Accept: application/vnd.github.v3.raw" \
+          --remote-name \
+            --location https://api.github.com/repos/AshishBhoi/private/contents/redis.go
+    - name: Docker login
+      run: docker login docker.pkg.github.com -u AshishBhoi -p ${{ secrets.SECRET }}
+    - name: Build the Docker image
+      run: docker build -t docker.pkg.github.com/ashishbhoi/go-web-app/app:latest .
+    - name: Push Docker image to github
+      run: docker push docker.pkg.github.com/ashishbhoi/go-web-app/app:latest
